--- a/parts/user_edit.jade
+++ b/parts/user_edit.jade
@@ -14,28 +14,28 @@ template(name='user_edit_layout')
                             .ui.small.inline.header @#{current_user.username}
                             img.ui.centered.medium.rounded.image(src="{{c.url profile_image_id height=400 width=400 gravity='face' crop='fill'}}")
                                 
-                            a.ui.big.green.circular.button(href="/user/#{current_user.username}/") 
+                            a.ui.big.green.button(href="/user/#{current_user.username}/") 
                                 i.checkmark.big.icon
                                 strong save
-                            a.ui.basic.circular.button(href="/user/#{current_user.username}/edit/account" class="{{isActiveRoute 'user_edit_account'}}" title='account') 
+                            a.ui.basic.button(href="/user/#{current_user.username}/edit/account" class="{{isActiveRoute 'user_edit_account'}}" title='account') 
                                 i.cog.large.icon 
                                 |account
-                            a.ui.basic.circular.button(href="/user/#{current_user.username}/edit/info" class="{{isActiveRoute 'user_edit_info'}}" title='info') 
+                            a.ui.basic.button(href="/user/#{current_user.username}/edit/info" class="{{isActiveRoute 'user_edit_info'}}" title='info') 
                                 i.info.large.icon 
                                 |info
-                            a.ui.basic.circular.button(href="/user/#{current_user.username}/edit/alerts" class="{{isActiveRoute 'user_edit_alerts'}}") 
+                            a.ui.basic.button(href="/user/#{current_user.username}/edit/alerts" class="{{isActiveRoute 'user_edit_alerts'}}") 
                                 i.bell.large.icon 
                                 |alerts
-                            a.ui.basic.circular.button(href="/user/#{current_user.username}/edit/reviews" class="{{isActiveRoute 'user_edit_reviews'}}") 
+                            a.ui.basic.button(href="/user/#{current_user.username}/edit/reviews" class="{{isActiveRoute 'user_edit_reviews'}}") 
                                 i.edit.large.icon 
                                 |reviews
-                            a.ui.basic.circular.button(href="/user/#{current_user.username}/edit/privacy" class="{{isActiveRoute 'user_edit_privacy'}}") 
+                            a.ui.basic.button(href="/user/#{current_user.username}/edit/privacy" class="{{isActiveRoute 'user_edit_privacy'}}") 
                                 i.lock.privacy.large.icon 
                                 | privacy
-                            a.ui.basic.circular.button(href="/user/#{current_user.username}/edit/badges" class="{{isActiveRoute 'user_edit_badges'}}" title='badges') 
+                            a.ui.basic.button(href="/user/#{current_user.username}/edit/badges" class="{{isActiveRoute 'user_edit_badges'}}" title='badges') 
                                 i.certificate.large.icon
                                 |badges
-                            a.ui.basic.circular.button(href="/user/#{current_user.username}/edit/company" class="{{isActiveRoute 'company_info'}}" title='membership') 
+                            a.ui.basic.button(href="/user/#{current_user.username}/edit/company" class="{{isActiveRoute 'company_info'}}" title='membership') 
                                 i.building.large.icon
                                 | company
                         .twelve.wide.column
