--- a/client/client.jade
+++ b/client/client.jade
@@ -15,6 +15,14 @@ head
     link(rel="manifest" href="/site.webmanifest")
     script(src='https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js')
 
+    link(href="https://cdn.jsdelivr.net/npm/suneditor@latest/dist/css/suneditor.min.css" rel="stylesheet")
+    script(src="https://cdn.jsdelivr.net/npm/suneditor@latest/dist/suneditor.min.js")
+    script(src="https://cdn.jsdelivr.net/npm/suneditor@latest/src/lang/en.js")
+
+    script(src="https://cdn.jsdelivr.net/npm/sweetalert2@9")
+
+
+
     link(rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.4/dist/semantic.min.css")
     script(src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.4/dist/semantic.min.js")
     script(async src="https://www.googletagmanager.com/gtag/js?id=G-GLYPPRGJFQ")
@@ -31,8 +39,8 @@ template(name='layout')
     +nav
     .ui.bottom.attached.pushable.segment
         // +top_sidebar
-        // +left_sidebar
-        // +right_sidebar
+        +left_sidebar
+        +right_sidebar
                 
         #main_area.global_container.pusher
             +yield
@@ -43,6 +51,3 @@ template(name='layout')
 template(name='not_found')
     .ui.basic.center.aligned.padded.segment
         .ui.center.aligned.header page not found
-
-
-template(name='i')
